[package]
name = "autoschematic-connector-patio-lights"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "Mess with the lighst on https://autoschematic.sh"

[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-core = { path = "../../autoschematic/autoschematic-core", version = "0.6.0" }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
colored = "3.0.0"
